--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>contato@synapse.com.br</span>
+                            <span>synapse@synapsesofware.com.br</span>
                         </li>
                         <li>
                             <i class="fas fa-clock"></i>
