--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             </div>
                             <div class="contact-details">
                                 <h3>E-mail</h3>
-                                <p>contato@synapse.com.br</p>
+                                <p>synapse@synapsesofware.com.br</p>
                             </div>
                         </div>
                         <div class="contact-card">
