--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                         <div class="member-info">
                         <h3 class="member-name">Felipe Medeiros</h3>
                          <p class="member-position">Desenvolvedor Front-end</p>
-                         <p class="member-bio">Especialista em UI/UX, Felipe traz criatividade e elegância para cada projeto front-end que desenvolve, transformando ideias em experiências visuais cativantes.</p>
+                         <p class="member-bio">Como Desenvolvedor Front-end e Especialista em UI/UX, Felipe colabora para dar vida a ideias, aplicando criatividade e elegância em cada projeto. Seu foco é desenvolver experiências de usuário que não apenas sejam visualmente atraentes, mas também altamente funcionais!</p>
                         <div class="member-social">                          
                            </div>
                       </div>
@@ -117,7 +117,7 @@
                     <div class="member-info">
                         <h3 class="member-name">Bruno Assoni</h3>
                         <p class="member-position">Desenvolvedor Back-end</p>
-                        <p class="member-bio">Arquiteto de soluções, Bruno constroi o coração pulsante de sistemas, garantindo performance,escabilidade e segurança.</p>
+                        <p class="member-bio">Um backend é a parte de um sistema que fica por trás das telas, responsável por processar dados, executar regras de negócio e se comunicar com bancos de dados e outros serviços. Arquiteto de soluções, Bruno constrói o coração pulsante de sistemas, garantindo performance, escalabilidade e segurança.</p>
                         <div class="member-social">                          
                         </div>
                     </div>
